--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@vue/server-renderer": "^3.3.0",
+    "canvas": "^3.1.0",
     "express": "^4.18.2",
     "puppeteer": "^21.0.0",
     "vue": "^3.3.0"
